Fix license spacing.

--- a/ControlR.Web.Client/Components/Pages/About.razor.css
+++ b/ControlR.Web.Client/Components/Pages/About.razor.css
@@ -4,3 +4,10 @@
     column-gap: 15px;
     row-gap: 20px;
 }
+
+.licenses-grid {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    column-gap: 20px;
+    row-gap: 10px;
+}
